Fix safari base view (i.e. not using chrome) hero image stretching on mobile.

--- a/blog/_sass/minima/_layout.scss
+++ b/blog/_sass/minima/_layout.scss
@@ -219,7 +219,7 @@ html {
   text-align: center;
   .feature-img {
     max-width: 100%;
-    height: 50%;
+    max-height: 50%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
